# django-countdown

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
example/: README.md
example/example_project/: settings.py  urls.py  views.py
example/example_project/locale/pl/LC_MESSAGES/: django.mo  django.po
example/example_project/templates/example/: index.html
src/django_countdown/: admin.py  apps.py  context_processors.py  middleware.py  models.py
src/django_countdown.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/django_countdown/locale/pl/LC_MESSAGES/: django.mo  django.po
src/django_countdown/management/commands/: start_countdown.py
src/django_countdown/migrations/: 0001_initial.py  0002_alter_sitecountdown_countdown_time.py  0003_sitecountdown_maintenance_until.py  0004_alter_sitecountdown_long_description.py  0005_alter_sitecountdown_options_and_more.py
src/django_countdown/static/django_countdown/scss/: countdown.css  countdown.scss
src/django_countdown/templates/django_countdown/: blocked.html  blocked_base.html  blocked_bootstrap.html  blocked_foundation.html  countdown_banner.html
tests/: settings.py  test_admin.py  test_apps.py  test_django_countdown.py  test_start_countdown.py
